force-app/main/default/objects/Office_Price_Schedule_Map__c/Office_Price_Schedule_Map__c.object-meta.xml
<CustomObject>
    <description>Mapping between the Office Number and the price schedule they are using.</description>
    <label>Office Price Schedule Map</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Office Nbr</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Office Price Schedule Maps</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>