force-app/main/default/objects/Office_Price_Schedule_Map__c/fields/Cost_Center__c.field-meta.xml
<CustomField>
    <fullName>Cost_Center__c</fullName>
    <description>Left Pad the Sales Office Number with Zeros.</description>
    <formula>LPAD(Name,4,&apos;0&apos;)</formula>
    <inlineHelpText>Left Pad the Sales Office Number with Zeros.</inlineHelpText>
    <label>Cost Center</label>
    <type>Text</type>
</CustomField>