force-app/main/default/objects/Office_Price_Schedule_Map__c/fields/Price_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Price_Schedule__c</fullName>
    <description>The Price Schedule to use.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The Price Schedule to use.</inlineHelpText>
    <label>Price Schedule</label>
    <length>10</length>
    <type>Text</type>
</CustomField>