force-app/main/default/objects/Office_Price_Schedule_Map__c/fields/Sales_Org__c.field-meta.xml
<CustomField>
    <fullName>Sales_Org__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Sales Org</label>
    <length>15</length>
    <type>Text</type>
</CustomField>