force-app/main/default/objects/Office_Price_Schedule_Map__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Avg__c</columns>
    <columns>Wkly_Pct__c</columns>
    <columns>BW_SM_Pct__c</columns>
    <columns>Monthly_Pct__c</columns>
    <columns>Price_Schedule__c</columns>
    <columns>Branch_Nbr__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>