force-app/main/default/objects/Office_Price_Schedule_Map__c/listViews/All_MMS.listView-meta.xml
<ListView>
    <fullName>All_MMS</fullName>
    <columns>NAME</columns>
    <columns>Price_Schedule__c</columns>
    <columns>Cost_Center__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Sales_Org__c</field>
        <operation>equals</operation>
        <value>MMS</value>
    </filters>
    <label>All MMS</label>
</ListView>