force-app/main/default/objects/Office_Price_Schedule_Map__c/listViews/Schedule_X_Core.listView-meta.xml
<ListView>
    <fullName>Schedule_X_Core</fullName>
    <columns>NAME</columns>
    <columns>Branch_Nbr__c</columns>
    <columns>Cost_Center__c</columns>
    <columns>Sales_Org__c</columns>
    <columns>Price_Schedule__c</columns>
    <columns>Price_Schedule_2__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Price_Schedule__c</field>
        <operation>equals</operation>
        <value>X,Xalt</value>
    </filters>
    <filters>
        <field>Sales_Org__c</field>
        <operation>equals</operation>
        <value>PAY</value>
    </filters>
    <label>Schedule X-Core</label>
</ListView>